// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PluginHeader should render properly 1`] = `
<div>
  <div
    class="w-full bg-theme-background"
    data-testid="plugin-details__header"
  >
    <div
      class="flex w-full"
    >
      <div
        data-testid="PluginImage__placeholder"
      >
        <svg
          class="w-40"
        >
          plugin-logo-placeholder.svg
        </svg>
      </div>
      <div
        class="flex flex-col justify-between pl-8 space-y-3 w-full"
      >
        <div
          class="flex justify-between items-center"
        >
          <div
            class="flex flex-col mr-2"
          >
            <span
              class="text-2xl font-bold"
            >
              Test Plugin
            </span>
            <span
              class="text-medium text-theme-secondary-500"
            />
          </div>
          <div
            class="flex"
          >
            <button
              class="Button__StyledButton-mdtvtf-0 ePkfgQ"
              data-testid="PluginHeader__button--install"
              type="button"
            >
              <div
                class="flex relative items-center space-x-2"
              >
                Install
              </div>
            </button>
            <button
              class="Button__StyledButton-mdtvtf-0 iUSBMV ml-3"
              data-testid="PluginHeader__button--report"
              type="button"
            >
              <div
                class="flex relative items-center space-x-2"
              >
                <div
                  class="sc-bdfBwQ iyevwF"
                  height="20"
                  width="20"
                >
                  <svg>
                    report.svg
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </div>
        <div
          class="Divider-sc-19q4mlo-0 bKsVMa border-theme-secondary-300 dark:border-theme-secondary-800"
          type="horizontal"
        />
        <div
          class="flex justify-between space-4"
        >
          <div
            class="flex space-x-4 text-sm divide-x divide-theme-secondary-300 border-theme-secondary-300 dark:border-theme-secondary-800"
          >
            <div
              class="flex"
            >
              <div
                class="flex flex-col pr-6"
              >
                <span
                  class="font-bold text-theme-secondary-400"
                >
                  Author
                </span>
                <div
                  class="flex items-center"
                >
                  <span
                    class="font-bold text-theme-secondary-600"
                  >
                    ARK Ecosystem
                  </span>
                </div>
              </div>
            </div>
            <div
              class="flex px-6"
            >
              <div
                class="flex flex-col undefined"
              >
                <span
                  class="font-bold text-theme-secondary-400"
                >
                  Category
                </span>
                <span
                  class="font-bold text-theme-secondary-600"
                >
                  Utility
                </span>
              </div>
            </div>
            <div
              class="flex px-6"
            >
              <div
                class="flex flex-col"
              >
                <div
                  class="font-bold text-theme-secondary-400"
                >
                  URL
                </div>
                <a
                  class="font-bold text-theme-primary-600"
                  data-testid="PluginSpecs__url"
                  href="/"
                >
                  github.com
                </a>
              </div>
            </div>
          </div>
          <div
            class="flex space-x-4 text-sm divide-x divide-theme-secondary-300 border-theme-secondary-300 dark:border-theme-secondary-800"
          >
            <div
              class="flex pl-6"
            >
              <div
                class="flex flex-col text-right"
                data-testid="PluginSpecs__version"
              >
                <span
                  class="font-bold text-theme-secondary-400"
                >
                  Version
                </span>
                <span
                  class="font-bold text-theme-secondary-600"
                >
                  1.3.8
                </span>
              </div>
            </div>
            <div
              class="flex pl-6"
            >
              <div
                class="flex flex-col text-right"
                data-testid="PluginSpecs__size"
              >
                <span
                  class="font-bold text-theme-secondary-400"
                >
                  Size
                </span>
                <span
                  class="font-bold text-theme-secondary-600"
                >
                  4.2 Mb
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PluginHeader should render updating plugin 1`] = `
<div>
  <div
    class="w-full bg-theme-background"
    data-testid="plugin-details__header"
  >
    <div
      class="flex w-full"
    >
      <div
        class="rounded-lg overflow-hidden bg-theme-success-100 flex flex-col space-y-3 items-center justify-center border border-theme-secondary-300 dark:border-theme-secondary-600 w-40"
        data-testid="PluginImage__updating"
      >
        <svg
          height="40"
          viewBox="0 0 40 40"
          width="40"
        >
          <circle
            cx="20"
            cy="20"
            fill="transparent"
            r="19"
            stroke="var(--theme-color-success-200)"
            stroke-width="2"
          />
          <circle
            cx="20"
            cy="20"
            fill="transparent"
            r="19"
            stroke="var(--theme-color-success-600)"
            stroke-dasharray="119.38052083641213"
            stroke-dashoffset="95.50441666912971"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            transform="rotate(-90 20 20)"
          />
          <text
            data-testid="CircularProgressBar__percentage"
            dy="0.3em"
            fill="var(--theme-color-success-600)"
            font-size="0.8rem"
            font-weight="600"
            text-anchor="middle"
            x="50%"
            y="50%"
          >
            <tspan>
              20
              <tspan
                dy="-0.6em"
                font-size="0.4rem"
                font-weight="bold"
              >
                %
              </tspan>
            </tspan>
          </text>
        </svg>
        <p
          class="text-theme-secondary-600 dark:text-theme-secondary-text text-sm font-medium"
          data-testid="PluginImage__updating__label"
        >
          Updating...
        </p>
      </div>
      <div
        class="flex flex-col justify-between pl-8 space-y-3 w-full"
      >
        <div
          class="flex justify-between items-center"
        >
          <div
            class="flex flex-col mr-2"
          >
            <span
              class="text-2xl font-bold"
            >
              Test Plugin
            </span>
            <span
              class="text-medium text-theme-secondary-500"
            />
          </div>
          <div
            class="flex"
          >
            <button
              class="Button__StyledButton-mdtvtf-0 ePkfgQ"
              data-testid="PluginHeader__button--install"
              type="button"
            >
              <div
                class="flex relative items-center space-x-2"
              >
                Install
              </div>
            </button>
            <button
              class="Button__StyledButton-mdtvtf-0 iUSBMV ml-3"
              data-testid="PluginHeader__button--report"
              type="button"
            >
              <div
                class="flex relative items-center space-x-2"
              >
                <div
                  class="sc-bdfBwQ iyevwF"
                  height="20"
                  width="20"
                >
                  <svg>
                    report.svg
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </div>
        <div
          class="Divider-sc-19q4mlo-0 bKsVMa border-theme-secondary-300 dark:border-theme-secondary-800"
          type="horizontal"
        />
        <div
          class="flex justify-between space-4"
        >
          <div
            class="flex space-x-4 text-sm divide-x divide-theme-secondary-300 border-theme-secondary-300 dark:border-theme-secondary-800"
          >
            <div
              class="flex"
            >
              <div
                class="flex flex-col pr-6"
              >
                <span
                  class="font-bold text-theme-secondary-400"
                >
                  Author
                </span>
                <div
                  class="flex items-center"
                >
                  <span
                    class="font-bold text-theme-secondary-600"
                  >
                    ARK Ecosystem
                  </span>
                </div>
              </div>
            </div>
            <div
              class="flex px-6"
            >
              <div
                class="flex flex-col undefined"
              >
                <span
                  class="font-bold text-theme-secondary-400"
                >
                  Category
                </span>
                <span
                  class="font-bold text-theme-secondary-600"
                >
                  Utility
                </span>
              </div>
            </div>
            <div
              class="flex px-6"
            >
              <div
                class="flex flex-col"
              >
                <div
                  class="font-bold text-theme-secondary-400"
                >
                  URL
                </div>
                <a
                  class="font-bold text-theme-primary-600"
                  data-testid="PluginSpecs__url"
                  href="/"
                >
                  github.com
                </a>
              </div>
            </div>
          </div>
          <div
            class="flex space-x-4 text-sm divide-x divide-theme-secondary-300 border-theme-secondary-300 dark:border-theme-secondary-800"
          >
            <div
              class="flex pl-6"
            >
              <div
                class="flex flex-col text-right"
                data-testid="PluginSpecs__version"
              >
                <span
                  class="font-bold text-theme-secondary-400"
                >
                  Version
                </span>
                <span
                  class="font-bold text-theme-secondary-600"
                >
                  1.3.8
                </span>
              </div>
            </div>
            <div
              class="flex pl-6"
            >
              <div
                class="flex flex-col text-right"
                data-testid="PluginSpecs__size"
              >
                <span
                  class="font-bold text-theme-secondary-400"
                >
                  Size
                </span>
                <span
                  class="font-bold text-theme-secondary-600"
                >
                  4.2 Mb
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
